--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 				sponsors
 			</div>
 			<div class="sponsors">
-				<img src="images/sponsor1.png" alt="sponsor">
-				<img src="images/sponsor2.png" alt="sponsor">
-				<img src="images/sponsor3.png" alt="sponsor">
-				<img src="images/sponsor4.png" alt="sponsor">
+				<a href="#"><img src="images/sponsor1.png" alt="sponsor"></a>
+				<a href="#"><img src="images/sponsor2.png" alt="sponsor"></a>
+				<a href="#"><img src="images/sponsor3.png" alt="sponsor"></a>
+				<a href="#"><img src="images/sponsor4.png" alt="sponsor"></a>
 			</div>
 		</div>
 		<div class="ctg clrfx">
@@ -74,55 +74,55 @@
 				sponsors
 			</div>
 			<div class="bigSponsor">
-				<img src="images/sponsorBig.png" alt="">
+				<a href="#"><img src="images/sponsorBig.png" alt=""></a>
 			</div>
 		</div>
 	</div>
 	<div class="blog">
 		<div class="blogHead">from the blog</div>
 		<div class="article">
-			<img src="images/post1.png" alt="post1">
+			<a href="#"><img src="images/post1.png" alt="post1"></a>
 			<div class="news">
 				<h2>Our Biggest Launch of the Year!</h2>
 				<p class="info">October 1st, 2009 | Category Name | Author Name | 23 Comments</p>
 				<p class="description">In the last three years our Envato Marketplaces (FlashDen, ThemeForest, GraphicRiver, AudioJungle and .....</p>
-				<p class="more">LEARN MORE</p>
+				<a href="#" class="more">LEARN MORE</a>
 			</div>
 		</div>
 		<div class="article">
-			<img src="images/post2.png" alt="">
+			<a href="#"><img src="images/post2.png" alt=""></a>
 			<div class="news">
 				<h2>Big Time Eye Candy from Creattica</h2>
 				<p class="info">October 5th, 2009 | Category Name | Author Name | 23 Comments</p>
 				<p class="description">For those who are not in the know, Creattica is a great place to drum up some inspiration or to just browse through ...</p>
-				<p class="more">LEARN MORE</p>
+				<a href="#" class="more">LEARN MORE</a>
 			</div>
 		</div>
 		<div class="article">
-				<img src="images/post3.png" alt="">
+				<a href="#"><img src="images/post3.png" alt=""></a>
 				<div class="news">
 					<h2>Best of the Web – July 2009</h2>
 					<p class="info">October 3th, 2009 | Category Name | Author Name | 23 Comments</p>
 					<p class="description">The month of July had a lot of interesting articles on furthering one’s self as a designer. Whether you are looking to become famous, or more proficient and informed....</p>
-					<p class="more">LEARN MORE</p>
+					<a href="#" class="more">LEARN MORE</a>
 				</div>
 		</div>
 		<div class="article">
-			<img src="images/post4.png" alt="">
+			<a href="#"><img src="images/post4.png" alt=""></a>
 			<div class="news">
 				<h2>Create an Intense Movie Poster in Photoshop</h2>
 				<p class="info">October 2th, 2009 | Category Name | Author Name | 23 Comments</p>
 				<p class="description">Designers love to be critical about movie posters, and while you may think you have better ideas about how to sell a ...</p>
-				<p class="more">LEARN MORE</p>
+				<a href="#" class="more">LEARN MORE</a>
 			</div>
 		</div>
 		<div class="article">
-			<img src="images/post5.png" alt="">
+			<a href="#"><img src="images/post5.png" alt=""></a>
 			<div class="news">
 				<h2>Adam Spizak Interview <br> Read it now !</h2>
 				<p class="info">October 1th, 2009 | Category Name | Author Name | 23 Comments</p>
 				<p class="description">Adam Spizak is a unique breed of designer, from the first glance at his work you will be engulfed by very strong ...</p>
-				<p class="more">LEARN MORE</p>
+				<a href="#" class="more">LEARN MORE</a>
 			</div>
 		</div>
 	</div>
@@ -134,6 +134,11 @@
 			<div class="button">
 				next <i class="fas fa-angle-double-right arrow"></i>
 			</div>
+	</div>
+	<div class="bannerWrap">
+		<div class="banner">
+			<a href="#"><img src="images/banner.png" alt=""></a>
+		</div>
 	</div>
 	<div class="bigFooter">
 		<div class="footerBlock">
@@ -157,11 +162,11 @@
 			</div>
 			<div class="footerArticle">
 				<div>3:12 PM Sep 9th from Facebook </div>
-				<div>RT @collis New Envato Site! http://workawesome.com Go Work! :-)</div>
+				<div>RT @collis New Envato Site! <a href="http://workawesome.com">http://workawesome.com</a> Go Work! :-)</div>
 			</div>
 			<div class="footerArticle">
 				<div>12:46 AM Aug 27th from web</div>
-				<div>RT @collis New Envato Site! http://workawesome.com Go Work! :-)</div>
+				<div>RT @collis New Envato Site! <a href="http://workawesome.com">http://workawesome.com</a> Go Work! :-)</div>
 			</div>
 		</div>
 		<div class="footerBlock">
@@ -183,10 +188,10 @@
 			magnifico
 		</div>
 		<div>
-			© 2009 MAGNIFICO  |  DESIGNED AND DEVELOPPED BY <span>DDSTUDIOS</span>
+			© 2009 MAGNIFICO  |  DESIGNED AND DEVELOPPED BY <a href="#">DDSTUDIOS</a>
 		</div>
 		<div>
-			NEVIS FONT BY <span>ED MERRITT</span> | ILLUSTRATIONS BY <span>POLEL</span>
+			NEVIS FONT BY <a href="#">ED MERRITT</a> | ILLUSTRATIONS BY <a href="#">POLEL</a>
 		</div>
 	</footer>
 	<script>
